fix(docs-infra): calculate list of Angular Docs versions based on VERSION (#56002)
fix(docs-infra): calculate the list of Angular Docs versions based on VERSION, append --config=release to docs build and serve the script. Support displaying the right color of navigation for the deprecated state.
fix(docs-infra): add scrollbar to version picker
fix(docs-infra): set initial adev docs version to 18
fix(docs-infra): remove --config=release from scripts for local development, write unit tests
fix(docs-infra): update CI tests step
fix(docs-infra): remove rc from the list
fix(docs-infra): update unit test to check count of versions

PR Close #56002

--- a/adev/src/app/core/layout/navigation/mini-menu.scss
+++ b/adev/src/app/core/layout/navigation/mini-menu.scss
@@ -77,6 +77,8 @@
 }
 
 .adev-version-picker {
+  overflow-y: auto;
+  max-height: 90vh;
   top: 30px;
   left: 10px;
   position: absolute;
